test/syntax/fail/duplicate_constructor.sync
type s =
  | S0
  | S0
